pictures added, colors changed

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>English Game</title>
     <style>
       canvas {
-        /*background: #F58E7E;*/
-        /*background: #F0F0F0;*/
-        background: #C0FF89;
+        background: #bfe5f5;
         display: block;
         margin: 0 auto;
       }
